src/test/success/negative_value.egern
var a = 3 - 6
print(a)
