src/test/fail/redeclaring_variable_fail.egern
var a = 3
var a = 2
